  the GIL is released, or owned by another thread.

- Issue #4122: On Windows, fix a compilation error when using the
  Py_UNICODE_ISSPACE macro in an extension module.

- Issue #4293: Py_AddPendingCall is now thread safe and can be used for
  asynchronous notifications to python from any thread.  Documentation added.

Extension Modules
-----------------

- Issues #1530559, #1741130: Fix various struct.pack inconsistencies
  for the integer formats ('bBhHiIlLqQ').  In the following, '*'
  represents any of '=', '<', '>'.

    - Packing a float now always gives a Deprecation Warning.
      Previously it only warned for 'I', 'L', '*B', '*H', '*I', '*L'.

    - If x is not an int, long or float, then packing x will always
      result in struct.error.  Previously an x with an __int__ method
      could be packed by 'b', 'B', 'h', 'H', 'i', 'l', '*b', '*h'
      ,'*i', '*l', and an x with a __long__ method could be packed by
      'q', 'Q', '*q', '*Q'; for x with neither __int__ nor __long__,
      TypeError used to be raised (with a confusing error message) for
      'I', 'L', '*B', '*H', '*I', '*L', and struct.error in other cases.

- Issue #4873: Fix resource leaks in error cases of pwd and grp.

- Issue #4751: For hashlib algorithms provided by OpenSSL, the Python
  GIL is now released during computation on data lengths >= 2048 bytes.

- Issue #3745: Fix hashlib to always reject unicode and non buffer-api
  supporting objects as input no matter how it was compiled (built in
  implementations or external openssl library).

- Issue #4397: Fix occasional test_socket failure on OS X.

- Issue #4279: Fix build of parsermodule under Cygwin.

- Issue #4051: Prevent conflict of UNICODE macros in cPickle.

- Issue #4228: Pack negative values the same way as 2.4 in struct's L format.

- Issue #1040026: Fix os.times result on systems where HZ is incorrect.

- Issues #3167, #3682: Fix test_math failures for log, log10 on Solaris,
  OpenBSD.
